Followers: fix layout issues

--- a/frontend/src/assets/stylesheet.css
+++ b/frontend/src/assets/stylesheet.css
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .navbar-friends {
-    height: 166.5px;
+    height: 174px;
 }
 
 .navbar-brand {
@@ -635,7 +635,7 @@ h1, h2, h3, h4, h5, h6, p {
     }
 
     .navbar-friends {
-        height: 182px;
+        height: 190px;
     }
 } 
 
